# focsle

./: .gitignore  README.md  compute_fisher.py  pyproject.toml
.github/workflows/: code-quality.yml  tests.yml
notebooks/: cosmic_shear_correlations_base.ipynb  cosmic_shear_disco.ipynb  cosmic_shear_disco.py  dj_plotter.py  fisher_forecast_example.ipynb  plot_optimistic_contours.py
results/: fisher_results_Nlens=1e4_sigL=0.1_Nbin_z=1_SNR_goal=8_Nbin_max=20_nsamp=1e6.pkl  fisher_results_Nlens=1e4_sigL=0.2_Nbin_z=1_SNR_goal=8_Nbin_max=20_nsamp=1e3.pkl  fisher_results_Nlens=1e5_sigL=0.05_Nbin_z=6_SNR_goal=8_Nbin_max=20_nsamp=1e6.pkl  fisher_results_Nlens=1e5_sigL=0.2_Nbin_z=6_SNR_goal=8_Nbin_max=20_nsamp=1e6.pkl  fisher_results_Nlens=2e3_sigL=0.2_Nbin_z=1_SNR_goal=8_Nbin_max=20_nsamp=1e3.pkl
src/focsle/: __init__.py  data_loader.py  fisher.py  plotting.py  theory.py
tests/: __init__.py  test_bessel_functions.py  test_data_loader.py  test_matrix_operations.py
