[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "focsle"
version = "0.1.0"
description = "Fisher Forecasting for Cosmological Strong Lensing Experiments"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "camb",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
focsle = ["data/*.txt"]
